--- a/docs/src/man/man1/schedrmt.1.adoc
+++ b/docs/src/man/man1/schedrmt.1.adoc
@@ -10,14 +10,21 @@ schedrmt - telnet based scheduler for LinuxCNC
 
 == DESCRIPTION
 
-With -- --port Waits for socket connections (Telnet) on specified socket, without port uses default port 5007.
-With -- --name _<server name>_ Sets the server name to specified name for Hello.
-With -- --connectpw _<password>_ Sets the connection password to _password_.  Default 'EMC'.
-With -- --enablepw _<password>_ Sets the enable password to _password_. Default 'EMCTOO'.
-With -- --sessions <max sessions> Sets the maximum number of simultaneous connextions to max sessions.
-Default is no limit (-1).
-With -- --path Sets the base path to program (G-Code) files, default is "../../nc_files/". Make sure to include the final slash (/).
-With -- -ini _<INI file>_, uses specified _INI file_ instead of default 'emc.ini'.
+With -- --port::
+  Waits for socket connections (Telnet) on specified socket, without port uses default port 5007.
+With -- --name _<server name>_::
+  Sets the server name to specified name for Hello.
+With -- --connectpw _<password>_::
+  Sets the connection password to _password_.  Default 'EMC'.
+With -- --enablepw _<password>_::
+  Sets the enable password to _password_. Default 'EMCTOO'.
+With -- --sessions <max sessions>::
+  Sets the maximum number of simultaneous connextions to max sessions.
+  Default is no limit (-1).
+With -- --path::
+  Sets the base path to program (G-Code) files, default is "../../nc_files/". Make sure to include the final slash (/).
+With -- -ini _<INI file>_::
+  Uses specified _INI file_ instead of default 'emc.ini'.
 
 There are six commands supported, for which the commands set and get contain LinuxCNC-specific sub-commands
 based on the commands supported by emcsh, but where the "emc_" prefix is omitted.
@@ -71,7 +78,7 @@ INIFILE:: Returns the path and file name of the current configuration INI file.
 
 plat:: Returns the platform for which this was compiled, e.g., linux_2_0_36
 
-ini _<var>_ _<section>_:: Returns the string value of <var> in section <section>, in EMC_INIFILE.
+ini _<var>_ _<section>_:: Returns the string value of _<var>_ in section _<section>_, in EMC_INIFILE.
 
 debug {__<new value>__}:: With get, returns the integer value of EMC_DEBUG, in the EMC.
 Note that it may not be true that the local EMC_DEBUG variable here (in emcsh and the GUIs that use it) is the same as the EMC_DEBUG value in the EMC.
@@ -84,8 +91,8 @@ With no arg, returns the program queue status as "stop", "run", "pause"
 or "error". Otherwise, sends a command to set the current mode to
 "stop", "run" or "pause".
 
-QStatus _<Queue Size>_ _<First Tag Id>_ _<Last Tag Id>_ _<Queue CRC>_:: Get only,
-returns then number of programs in queue (Queue Size), the Tag id of the
+QStatus _<Queue Size>_ _<First Tag Id>_ _<Last Tag Id>_ _<Queue CRC>_ (Get only)::
+Returns then number of programs in queue (Queue Size), the Tag id of the
 first program in the queue, the Tag id of the last program in the queue,
 and the CRC of all of the Tag Ids in the queue. The actual calculation
 of the CRC is not important, the purpose is to be able to compare the
