--- a/docs/src/man/man3/hm2_uart_send.3hm2.adoc
+++ b/docs/src/man/man3/hm2_uart_send.3hm2.adoc
@@ -19,8 +19,8 @@ The UART FIFO is 64 bytes deep, attempts to transmit more than 64 bytes may have
 
 "name" is a unique string given to each UART during hostmot2 setup.
 The names of the available channels are printed to standard output during
-the driver loading process and take the form: hm2___<board name>__.__<board index>__.uart.__<index>__
-For example `hm2_5i23.0.uart.0`.
+the driver loading process and take the form: hm2___<board name>__.__<board index>__.uart.__<index>__,
+for example `hm2_5i23.0.uart.0`.
 
 This function performs writes of data to the specified UART.
 It should be used inside a function in a realtime or non-realtime HAL component.
