--- a/docs/src/man/man9/sserial.9.adoc
+++ b/docs/src/man/man9/sserial.9.adoc
@@ -32,32 +32,34 @@ three per-port pins and three parameters.
 
 *Pins:*
 
-(bit, in) .sserial.port-N.run:: Enables the specific Smart Serial module.
-Setting this pin low will disable all boards on the port and puts the
-port in a pass-through mode where device parameter setting is possible.
-It is necessary to toggle the state of this pin if there is a
-requirement to alter a remote parameter on a live system. This pin
-defaults to TRUE and can be left unconnected. However, toggling the pin
-low-to-high will re-enable a faulted drive so the pin could usefully be
-connected to the iocontrol.0.user-enable-out pin.
+.sserial.port-__N__.run (bit, in):: Enables the specific Smart Serial module.
+ Setting this pin low will disable all boards on the port and puts the
+ port in a pass-through mode where device parameter setting is possible.
+ It is necessary to toggle the state of this pin if there is a
+ requirement to alter a remote parameter on a live system.
+ This pin defaults to TRUE and can be left unconnected.
+ However, toggling the pin low-to-high will re-enable a faulted drive,
+ so the pin could usefully be connected to the `iocontrol.0.user-enable-out` pin.
 
-(u32, ro) .run_state:: Shows the state of the sserial communications
-state-machine. This pin will generally show a value of 0x03 in normal
-operation, 0x07 in setup mode and 0x00 when the "run" pin is false.
+.run_state (u32, ro)::
+ Shows the state of the sserial communications state-machine.
+ This pin will generally show a value of 0x03 in normal operation,
+ 0x07 in setup mode and 0x00 when the "run" pin is false.
 
-(u32, ro) .error-count:: Indicates the state of the Smart Serial error
-handler, see the parameters section for more details.
+.error-count (u32, ro)::
+ Indicates the state of the Smart Serial error handler,
+ see the parameters section for more details.
 
 *Parameters:*
 
-(u32 r/w) .fault-inc:: Any over-run or handshaking error in the
+.fault-inc (u32 r/w):: Any over-run or handshaking error in the
  SmartSerial communications will increment the .fault-count pin by the
  amount specified by this parameter. Default = 10.
 
-(u32 r/w) .fault-dec:: Every successful read/write cycle decrements the
+.fault-dec (u32 r/w):: Every successful read/write cycle decrements the
  fault counter by this amount. Default = 1.
 
-(u32 r/w) .fault-lim:: When the fault counter reaches this threshold the
+.fault-lim (u32 r/w):: When the fault counter reaches this threshold the
  Smart Serial interface on the corresponding port will be stopped and an
  error printed in dmesg. Together these three pins allow for control over
  the degree of fault- tolerance allowed in the interface. The default
@@ -102,7 +104,7 @@ correlate in layout or number to the physical ports on the card.
 
 *Pins:*
 
-(float in) angle::
+angle (float in)::
  The rotor angle of the motor in fractions of a full *phase* revolution.
  An angle of 0.5 indicates that the motor is half a turn / 180 degrees / π radians from the zero position.
  The zero position is taken to be the position that the motor adopts under no load with a
@@ -110,14 +112,16 @@ correlate in layout or number to the physical ports on the card.
  A 6 pole motor will have 3 zero positions per physical rotation.
  Note that the 8I20 drive automatically adds the phase lead/lag angle, and that this pin should see the raw rotor angle.
  There is a HAL module (bldc) which handles the complexity of differing motor and drive types.
-(float, in) current::
- The phase current command to the drive. This is scaled from -1 to +1 for forwards and reverse maximum currents.
+current (float, in)::
+ The phase current command to the drive.
+ This is scaled from -1 to +1 for forwards and reverse maximum currents.
  The absolute value of the current is set by the max_current parameter.
-(float, ro) bus-voltage:: The drive bus voltage in V.
+
+bus-voltage (float, ro):: The drive bus voltage in V.
  This will tend to show 25.6 V when the drive is unpowered and the drive will not operate below about 50 V.
-(float, ro) temp:: The temperature of the driver in degrees C.
-(u32, ro) comms:: The communication status of the drive. See the manual for more details.
-(bit, ro) status and fault.:: The following fault/status bits are exported.
+temp (float, ro):: The temperature of the driver in degrees C.
+comms (u32, ro):: The communication status of the drive. See the manual for more details.
+status and fault. (bit, ro):: The following fault/status bits are exported.
  For further details see the 8I20 manual: +
   fault.U-current / fault.U-current-not fault.V-current
   / fault.V-current-not fault.W-current / fault.W-current-not
@@ -136,38 +140,38 @@ correlate in layout or number to the physical ports on the card.
   status.wd-reset / status.wd-reset-not
 
 *Parameters:*::
-  The following parameters are exported.
-  See the PDF documentation downloadable from Mesa for further details:
+ The following parameters are exported.
+ See the PDF documentation downloadable from Mesa for further details:
 
-  hm2_5i25.0.8i20.0.1.angle-maxlim::
-  hm2_5i25.0.8i20.0.1.angle-minlim::
-  hm2_5i25.0.8i20.0.1.angle-scalemax::
-  hm2_5i25.0.8i20.0.1.current-maxlim::
-  hm2_5i25.0.8i20.0.1.current-minlim::
-  hm2_5i25.0.8i20.0.1.current-scalemax::
-  hm2_5i25.0.8i20.0.1.nvbrakeoffv::
-  hm2_5i25.0.8i20.0.1.nvbrakeonv::
-  hm2_5i25.0.8i20.0.1.nvbusoverv::
-  hm2_5i25.0.8i20.0.1.nvbusundervmax::
-  hm2_5i25.0.8i20.0.1.nvbusundervmin::
-  hm2_5i25.0.8i20.0.1.nvkdihi::
-  hm2_5i25.0.8i20.0.1.nvkdil::
-  hm2_5i25.0.8i20.0.1.nvkdilo::
-  hm2_5i25.0.8i20.0.1.nvkdp::
-  hm2_5i25.0.8i20.0.1.nvkqihi::
-  hm2_5i25.0.8i20.0.1.nvkqil::
-  hm2_5i25.0.8i20.0.1.nvkqilo::
-  hm2_5i25.0.8i20.0.1.nvkqp::
-  hm2_5i25.0.8i20.0.1.nvmaxcurrent::
-  hm2_5i25.0.8i20.0.1.nvrembaudrate::
-  hm2_5i25.0.8i20.0.1.swrevision::
-  hm2_5i25.0.8i20.0.1.unitnumber::
+hm2_5i25.0.8i20.0.1.angle-maxlim::
+hm2_5i25.0.8i20.0.1.angle-minlim::
+hm2_5i25.0.8i20.0.1.angle-scalemax::
+hm2_5i25.0.8i20.0.1.current-maxlim::
+hm2_5i25.0.8i20.0.1.current-minlim::
+hm2_5i25.0.8i20.0.1.current-scalemax::
+hm2_5i25.0.8i20.0.1.nvbrakeoffv::
+hm2_5i25.0.8i20.0.1.nvbrakeonv::
+hm2_5i25.0.8i20.0.1.nvbusoverv::
+hm2_5i25.0.8i20.0.1.nvbusundervmax::
+hm2_5i25.0.8i20.0.1.nvbusundervmin::
+hm2_5i25.0.8i20.0.1.nvkdihi::
+hm2_5i25.0.8i20.0.1.nvkdil::
+hm2_5i25.0.8i20.0.1.nvkdilo::
+hm2_5i25.0.8i20.0.1.nvkdp::
+hm2_5i25.0.8i20.0.1.nvkqihi::
+hm2_5i25.0.8i20.0.1.nvkqil::
+hm2_5i25.0.8i20.0.1.nvkqilo::
+hm2_5i25.0.8i20.0.1.nvkqp::
+hm2_5i25.0.8i20.0.1.nvmaxcurrent::
+hm2_5i25.0.8i20.0.1.nvrembaudrate::
+hm2_5i25.0.8i20.0.1.swrevision::
+hm2_5i25.0.8i20.0.1.unitnumber::
 
-(float, rw) max_current:: Sets the maximum drive current in Amps.
+max_current (float, rw):: Sets the maximum drive current in Amps.
  The default value is the maximum current programmed into the drive EEPROM.
  The value must be positive, and an error will be raised if a current in excess of the
  drive maximum is requested.
-(u32, ro) serial_number:: The serial number of the connected drive
+serial_number (u32, ro):: The serial number of the connected drive
  This is also shown on the label on the drive.
 
 === 7I64
@@ -178,73 +182,74 @@ for example `hm2_5i23.0.7i64.1.3.output-01`.
 
 *Pins:*
 
-7i64.0.0.output-NN (bit, in):: Writing a 1 or TRUE to this pin will enable output driver NN.
+7i64.0.0.output-__NN__ (bit, in):: Writing a 1 or TRUE to this pin will enable output driver NN.
  Note that the outputs are drivers (switches) rather than voltage outputs.
  The LED adjacent to the connector on the board shows the status.
  The output can be inverted by setting a parameter.
 
-7i64.0.0.input-NN (bit, out):: The value of input NN.
+7i64.0.0.input-__NN__ (bit, out):: The value of input _NN_.
  Note that the inputs are isolated and both pins of each input must be connected,
  typically to signal and the ground of the signal.
  (This need not be the ground of the board.)
 
-7i64.0.0.input-NN-not (bit, out):: An inverted copy of the corresponding input.
+7i64.0.0.input-__NN__-not (bit, out):: An inverted copy of the corresponding input.
 7i64.0.0.analog0 & 7i64.0.0.analog1 (float, out):: The two analogue inputs (0 to 3.3 V) on the board.
 
 *Parameters:*
 
-7i64.0.0.output-NN-invert (bit, rw):: Setting this parameter to 1 / TRUE
- will invert the output value, such that writing 0 to ``.gpio.NN.out` will
+7i64.0.0.output-__NN__-invert (bit, rw):: Setting this parameter to 1 / TRUE
+ will invert the output value, such that writing 0 to `.gpio.NN.out` will
  enable the output and vice-versa.
 
 === 7I76
 
-The 7I76 is not really a smart-serial device. It serves as a breakout
-for a number of other Hostmot2 functions. There are connections for 5
-step generators (for which see the main hostmot2 manpage). The stepgen
-pins are associated with the 5I25 (hm2_5i25.0.stepgen.00....) whereas
-the smart-serial pins are associated with the 7I76
-(hm2_5i25.0.7i76.0.0.output-00).
+The 7I76 is not really a smart-serial device.
+It serves as a breakout for a number of other Hostmot2 functions.
+There are connections for 5 step generators (for which see the main hostmot2 manpage).
+The stepgen pins are associated with the 5I25 (`hm2_5i25.0.stepgen.00`....),
+whereas the smart-serial pins are associated with the 7I76 (`hm2_5i25.0.7i76.0.0.output-00`).
 
 *Pins:*
 
-(float out) .7i76.0.0.analogN (modes 1 and 2 only):: Analogue input values.
-(float out) .7i76.0.0.fieldvoltage (mode 2 only):: Field voltage monitoring pin.
-(bit in) .7i76.0.0.spindir:: This pin provides a means to drive the spindle VFD direction terminals on the 7I76 board.
-(bit in) .7i76.0.0.spinena:: This pin drives the spindle-enable terminals on the 7I76 board.
-(float in) .7i76.0.0.spinout:: This controls the analogue output of the 7I76. This is intended as a speed control signal for a VFD.
-(bit out) .7i76.0.0.output-NN:: (NN = 0 to 15). 16 digital outputs. The sense of the signal can be set via a parameter.
-(bit out) .7i76.0.0.input-NN:: (NN = 0 to 31) 32 digital inputs.
-(bit in) .7i76.0.0.input-NN-not:: (NN = 0 to 31) An inverted copy of the inputs provided for convenience.
+.7i76.0.0.analog__N__ (modes 1 and 2 only) (float out):: Analogue input values.
+.7i76.0.0.fieldvoltage (mode 2 only) (float out):: Field voltage monitoring pin.
+.7i76.0.0.spindir (bit in):: This pin provides a means to drive the spindle VFD direction terminals on the 7I76 board.
+.7i76.0.0.spinena (bit in):: This pin drives the spindle-enable terminals on the 7I76 board.
+.7i76.0.0.spinout (float in):: This controls the analogue output of the 7I76.
+ This is intended as a speed control signal for a VFD.
+.7i76.0.0.output-__NN__ (bit out):: (_NN_ = 0 to 15). 16 digital outputs.
+ The sense of the signal can be set via a parameter.
+.7i76.0.0.input-__NN__ (bit out):: (_NN_ = 0 to 31) 32 digital inputs.
+.7i76.0.0.input-__NN__-not (bit in):: (_NN_ = 0 to 31) An inverted copy of the inputs provided for convenience.
  The two complementary pins may be connected to different signal nets.
 
 *Parameters:*
 
-(u32 ro) .7i76.0.0.nvbaudrate:: Indicates the vbaud rate. This probably should not be altered.
+.7i76.0.0.nvbaudrate (u32 ro):: Indicates the vbaud rate. This probably should not be altered.
 
-(u32 ro) .7i76.0.0.nvunitnumber:: Indicates the serial number of the device and should match a sticker on the card.
+.7i76.0.0.nvunitnumber (u32 ro):: Indicates the serial number of the device and should match a sticker on the card.
  This can be useful for working out which card is which.
 
-(u32 ro) .7i76.0.0.nvwatchdogtimeout:: The sserial remote watchdog timeout.
+.7i76.0.0.nvwatchdogtimeout (u32 ro):: The sserial remote watchdog timeout.
  This is separate from the Anything-IO card timeout.
  This is unlikely to need to be changed.
 
-(bit rw) .7i76.0.0.output-NN-invert:: Invert the sense of the corresponding output pin.
+.7i76.0.0.output-__NN__-invert (bit rw):: Invert the sense of the corresponding output pin.
 
-(bit rw) .7i76.0.0.spindir-invert:: Invert the senseof the spindle direction pin.
+.7i76.0.0.spindir-invert (bit rw):: Invert the senseof the spindle direction pin.
 
-(bit rw) .7i76.0.0.spinena-invert:: Invert the sense of the spindle-enable pin.
+.7i76.0.0.spinena-invert (bit rw):: Invert the sense of the spindle-enable pin.
 
-(float rw) .7i76.0.0.spinout-maxlim:: The maximum speed request allowable
+.7i76.0.0.spinout-maxlim (float rw):: The maximum speed request allowable
 
-(float rw) .7i76.0.0.spinout-minlim:: The minimum speed request.
+.7i76.0.0.spinout-minlim (float rw):: The minimum speed request.
 
-(float rw) .7i76.0.0.spinout-scalemax:: The spindle speed scaling.
+.7i76.0.0.spinout-scalemax (float rw):: The spindle speed scaling.
   This is the speed request which would correspond to full-scale output from the spindle control pin.
   For example with a 10 V drive voltage and a 10000 RPM scalemax a value of 10,000 RPM on the spinout pin would produce 10 V output.
   However, if spinout-maxlim were set to 5000 RPM then no voltage above 5 V would be output.
 
-(u32 ro) .7i76.0.0.swrevision:: The onboard firmware revision number.
+.7i76.0.0.swrevision (u32 ro):: The onboard firmware revision number.
   Utilities (man setsserial for details) exist to update and change this firmware.
 
 === 7I77
@@ -255,50 +260,50 @@ encoders and further details of them may be found in the hostmot2 manpage.
 
 *Pins:*
 
-(bit out) .7i77.0.0.input-__NN__:: (_NN_ = 0 to 31) 32 digital inputs.
+.7i77.0.0.input-__NN__ (bit out):: (_NN_ = 0 to 31) 32 digital inputs.
 
-(bit in) .7i77.0.0.input-__NN__-not:: (_NN_ = 0 to 31) An inverted copy of the
+.7i77.0.0.input-__NN__-not (bit in):: (_NN_ = 0 to 31) An inverted copy of the
  inputs provided for convenience. The two complementary pins may be
  connected to different signal nets.
 
-(bit out) .7i77.0.0.output-__NN__:: (_NN_ = 0 to 15). 16 digital outputs.
+.7i77.0.0.output-__NN__ (bit out):: (_NN_ = 0 to 15). 16 digital outputs.
  The sense of the signal can be set via a parameter.
 
-(bit in) .7i77.0.0.spindir:: This pin provides a means to drive the
+.7i77.0.0.spindir (bit in):: This pin provides a means to drive the
  spindle VFD direction terminals on the 7I76 board.
 
-(bit in) .7i77.0.0.spinena:: This pin drives the spindle-enable terminals on the 7I76 board.
+.7i77.0.0.spinena (bit in):: This pin drives the spindle-enable terminals on the 7I76 board.
 
-(float in) .7i77.0.0.spinout:: This controls the analog output of the 7I77.
+.7i77.0.0.spinout (float in):: This controls the analog output of the 7I77.
  This is intended as a speed control signal for a VFD.
 
-(bit in) .7i77.0.1.analogena:: This pin drives the analog enable terminals on the 7I77 board.
+.7i77.0.1.analogena (bit in):: This pin drives the analog enable terminals on the 7I77 board.
 
-(float in) .7i77.0.1.analogout__N__:: (_N_ = 0 to 5) This controls the analog output of the 7I77.
+.7i77.0.1.analogout__N__ (float in):: (_N_ = 0 to 5) This controls the analog output of the 7I77.
 
 *Parameters:*
 
-(bit rw) .7i77.0.0.output-NN-invert:: Invert the sense of the corresponding output pin.
+.7i77.0.0.output-__NN__-invert (bit rw):: Invert the sense of the corresponding output pin.
 
-(bit rw) .7i77.0.0.spindir-invert:: Invert the sense of the spindle direction pin.
+.7i77.0.0.spindir-invert (bit rw):: Invert the sense of the spindle direction pin.
 
-(bit rw) .7i77.0.0.spinena-invert:: Invert the sense of the spindle-enable pin.
+.7i77.0.0.spinena-invert (bit rw):: Invert the sense of the spindle-enable pin.
 
-(float rw) .7i77.0.0.spinout-maxlim:: The maximum speed request allowable
+.7i77.0.0.spinout-maxlim (float rw):: The maximum speed request allowable
 
-(float rw) .7i77.0.0.spinout-minlim:: The minimum speed request.
+.7i77.0.0.spinout-minlim (float rw):: The minimum speed request.
 
-(float rw) .7i77.0.0.spinout-scalemax:: The spindle speed scaling.
+.7i77.0.0.spinout-scalemax (float rw):: The spindle speed scaling.
  This is the speed request which would correspond to full-scale output from the spindle control pin.
  For example with a 10&#8201;V drive voltage and a 10000&#8201;RPM scalemax
  a value of 10000&#8201;RPM on the spinout pin would produce 10&#8201;V output.
  However, if spinout-maxlim were set to 5000&#8201;RPM then no voltage above 5&#8201;V would be output.
 
-(float rw) .7i77.0.0.analogout__N__-maxlim:: (_N_ = 0 to 5) The maximum speed request allowable
+.7i77.0.0.analogout__N__-maxlim (float rw):: (_N_ = 0 to 5) The maximum speed request allowable
 
-(float rw) .7i77.0.0.analogout__N__-minlim:: (_N_ = 0 to 5) The minimum speed request.
+.7i77.0.0.analogout__N__-minlim (float rw):: (_N_ = 0 to 5) The minimum speed request.
 
-(float rw) .7i77.0.0.analogout__N__-scalemax:: (_N_ = 0 to 5) The analog speed scaling.
+.7i77.0.0.analogout__N__-scalemax (float rw):: (_N_ = 0 to 5) The analog speed scaling.
  This is the speed request which would correspond to full-scale output from the spindle control pin.
  For example with a 10&#8201;V drive voltage and a 10000&#8201;RPM scalemax a value of 10000&#8201;RPM on the spinout pin would produce 10V output.
  However, if spinout-maxlim were set to 5000&#8201;RPM then no voltage above 5&#8201;V would be output.
@@ -316,29 +321,29 @@ MODE 4:: Bidirectional mode (48 bits in 48 bits out) plus 4 MPG encoder channels
 
 *Pins:*
 
-(bit in) .7i69.0.0.output-__NN__:: Digital output. Sense can be inverted with
+.7i69.0.0.output-__NN__ (bit in):: Digital output. Sense can be inverted with
 the corresponding Parameter.
 
-(bit out) .7i69.0.0.input-__NN__:: Digital input
+.7i69.0.0.input-__NN__ (bit out):: Digital input
 
-(bit out) .7i69.0.0.input-__NN__-not:: Digital input, inverted.
+.7i69.0.0.input-__NN__-not (bit out):: Digital input, inverted.
 
 *Parameters:*
 
-(u32 ro) .7i69.0.0.nvbaudrate:: Indicates the vbaud rate.
+.7i69.0.0.nvbaudrate (u32 ro):: Indicates the vbaud rate.
 This probably should not be altered.
 
-(u32 ro) .7i69.0.0.nvunitnumber:: Indicates the serial number of the
+.7i69.0.0.nvunitnumber (u32 ro):: Indicates the serial number of the
  device and should match a sticker on the card. This can be useful for
  working out which card is which.
 
-(u32 ro) .7i69.0.0.nvwatchdogtimeout:: The sserial remote watchdog timeout.
+.7i69.0.0.nvwatchdogtimeout (u32 ro):: The sserial remote watchdog timeout.
  This is separate from the Anything-IO card timeout.
  This is unlikely to need to be changed.
 
-(bit rw) .7i69.0.0.output-__NN__-invert:: Invert the sense of the corresponding output pin.
+.7i69.0.0.output-__NN__-invert (bit rw):: Invert the sense of the corresponding output pin.
 
-(u32 ro) .7i69.0.0.swrevision:: The onboard firmware revision number.
+.7i69.0.0.swrevision (u32 ro):: The onboard firmware revision number.
  Utilities exist to update and change this firmware.
 
 === 7I70
@@ -361,29 +366,30 @@ MODE 2:: Input plus field voltage
 
 *Pins:*
 
-(float out) .7i70.0.0.analog__N__ (modes 1 and 2 only):: Analogue input values.
+.7i70.0.0.analog__N__ (modes 1 and 2 only) (float out):: Analogue input values.
 
-(float out) .7i70.0.0.fieldvoltage (mode 2 only):: Field voltage monitoring pin.
+.7i70.0.0.fieldvoltage (mode 2 only) (float out):: Field voltage monitoring pin.
 
-(bit out) .7i70.0.0.input-__NN__:: (_NN_ = 0 to 47) 48 digital inputs.
+.7i70.0.0.input-__NN__ (bit out):: (_NN_ = 0 to 47) 48 digital inputs.
 
-(bit in) .7i70.0.0.input-__NN__-not:: (_NN_ = 0 to 47) An inverted copy of the
+.7i70.0.0.input-__NN__-not (bit in):: (_NN_ = 0 to 47) An inverted copy of the
 inputs provided for convenience. The two complementary pins may be
 connected to different signal nets.
 
 *Parameters:*
 
-(u32 ro) .7i70.0.0.nvbaudrate:: Indicates the vbaud rate. This probably
-should not be altered.
+.7i70.0.0.nvbaudrate (u32 ro):: Indicates the vbaud rate.
+ This probably should not be altered.
 
-(u32 ro) .7i70.0.0.nvunitnumber:: Indicates the serial number of the
- device and should match a sticker on the card. This can be useful for
- working out which card is which.
+.7i70.0.0.nvunitnumber (u32 ro):: Indicates the serial number of the
+ device and should match a sticker on the card.
+ This can be useful for working out which card is which.
 
-(u32 ro) .7i70.0.0.nvwatchdogtimeout:: The sserial remote watchdog timeout.
- This is separate from the Anything-IO card timeout. This is unlikely to need to be changed.
+.7i70.0.0.nvwatchdogtimeout (u32 ro):: The sserial remote watchdog timeout.
+ This is separate from the Anything-IO card timeout.
+ This is unlikely to need to be changed.
 
-(u32 ro) .7i69.0.0.swrevision:: The onboard firmware revision number.
+.7i69.0.0.swrevision (u32 ro):: The onboard firmware revision number.
  Utilities exist to update and change this firmware.
 
 === 7I71
@@ -401,30 +407,30 @@ MODE 1:: Outputs plus read back field voltage
 
 *Pins:*
 
-(float out) .7i71.0.0.fieldvoltage (mode 2 only):: Field voltage monitoring pin.
+.7i71.0.0.fieldvoltage (mode 2 only) (float out):: Field voltage monitoring pin.
 
-(bit out) .7i71.0.0.output-__NN__:: (_NN_ = 0 to 47) 48 digital outputs.
+.7i71.0.0.output-__NN__ (bit out):: (_NN_ = 0 to 47) 48 digital outputs.
  The sense may be inverted by the invert parameter.
 
-(bit out) .7i71.0.0.output-__NN__:: (_NN_ = 0 to 47) 48 digital outputs.
+.7i71.0.0.output-__NN__ (bit out):: (_NN_ = 0 to 47) 48 digital outputs.
  The sense may be inverted by the invert parameter.
 
 *Parameters:*
 
-(bit rw) .7i71.0.0.output-__NN__-invert:: Invert the sense of the corresponding output pin.
+.7i71.0.0.output-__NN__-invert (bit rw):: Invert the sense of the corresponding output pin.
 
-(u32 ro) .7i71.0.0.nvbaudrate:: Indicates the vbaud rate.
+.7i71.0.0.nvbaudrate (u32 ro):: Indicates the vbaud rate.
  This probably should not be altered.
 
-(u32 ro) .7i71.0.0.nvunitnumber:: Indicates the serial number of the
+.7i71.0.0.nvunitnumber (u32 ro):: Indicates the serial number of the
  device and should match a sticker on the card.
  This can be useful for determining which card is which.
 
-(u32 ro) .7i71.0.0.nvwatchdogtimeout:: The sserial remote watchdog timeout.
+.7i71.0.0.nvwatchdogtimeout (u32 ro):: The sserial remote watchdog timeout.
  This is separate from the Anything-IO card timeout.
  This is unlikely to need to be changed.
 
-(u32 ro) .7i69.0.0.swrevision:: The onboard firmware revision number.
+.7i69.0.0.swrevision (u32 ro):: The onboard firmware revision number.
  Utilities exist to update and change this firmware.
 
 === 7I73
@@ -449,38 +455,38 @@ MODE 2:: I/O + ENCODER + ANALOG IN FAST DISPLAY
 
 *Pins:*
 
-(float out) .7i73.0.0.analogin__N__:: Analogue inputs. Up to 8 channels may
+.7i73.0.0.analogin__N__ (float out):: Analogue inputs. Up to 8 channels may
  be available dependent on software and hardware configuration modes
  (see the PDF manual downloadable from https://www.mesanet.com).
 
-(u32 in) .7i73.0.1.display (modes 1 and 2):: Data for LCD display.
+.7i73.0.1.display (modes 1 and 2) (u32 in):: Data for LCD display.
  This pin may be conveniently driven by the HAL "lcd" component which allows
  the formatted display of the values any number of HAL pins and textual content.
 
-(u32 in) .7i73.0.1.display32 (mode 2 only):: 4 bytes of data for LCD display.
+.7i73.0.1.display32 (mode 2 only) (u32 in):: 4 bytes of data for LCD display.
  This mode is not supported by the HAL "lcd" component.
 
-(s32 out) .7i73.0.1.encN:: The position of the MPG encoder counters.
-(bit out) .7i73.0.1.input-__NN__:: Up to 24 digital inputs (dependent on config)
-(bit out) .7i73.0.1.input-__NN__-not:: Inverted copy of the digital inputs
-(bit in) .7i73.0.1.output-__NN__:: Up to 22 digital outputs (dependent on config)
+.7i73.0.1.encN (s32 out):: The position of the MPG encoder counters.
+.7i73.0.1.input-__NN__ (bit out):: Up to 24 digital inputs (dependent on config)
+.7i73.0.1.input-__NN__-not (bit out):: Inverted copy of the digital inputs
+.7i73.0.1.output-__NN__ (bit in):: Up to 22 digital outputs (dependent on config)
 
 *Parameters:*
 
-(u32 ro) .7i73.0.1.nvanalogfilter::
-(u32 ro) .7i73.0.1.nvbaudrate::
-(u32 ro) .7i73.0.1.nvcontrast::
-(u32 ro) .7i73.0.1.nvdispmode::
-(u32 ro) .7i73.0.1.nvencmode0::
-(u32 ro) .7i73.0.1.nvencmode1::
-(u32 ro) .7i73.0.1.nvencmode2::
-(u32 ro) .7i73.0.1.nvencmode3::
-(u32 ro) .7i73.0.1.nvkeytimer::
-(u32 ro) .7i73.0.1.nvunitnumber::
-(u32 ro) .7i73.0.1.nvwatchdogtimeout::
-(u32 ro) .7i73.0.1.output-00-invert::
+.7i73.0.1.nvanalogfilter (u32 ro)::
+.7i73.0.1.nvbaudrate (u32 ro)::
+.7i73.0.1.nvcontrast (u32 ro)::
+.7i73.0.1.nvdispmode (u32 ro)::
+.7i73.0.1.nvencmode0 (u32 ro)::
+.7i73.0.1.nvencmode1 (u32 ro)::
+.7i73.0.1.nvencmode2 (u32 ro)::
+.7i73.0.1.nvencmode3 (u32 ro)::
+.7i73.0.1.nvkeytimer (u32 ro)::
+.7i73.0.1.nvunitnumber (u32 ro)::
+.7i73.0.1.nvwatchdogtimeout (u32 ro)::
+.7i73.0.1.output-00-invert (u32 ro)::
 
 For further details of the use of the above see the Mesa manual.
 
-(bit rw) .7i73.0.1.output-01-invert:: Invert the corresponding output bit.
-(s32 ro) .7i73.0.1.swrevision:: The version of firmware installed.
+.7i73.0.1.output-01-invert (bit rw):: Invert the corresponding output bit.
+.7i73.0.1.swrevision (s32 ro):: The version of firmware installed.
