--- a/docs/src/gui/qtdragon.adoc
+++ b/docs/src/gui/qtdragon.adoc
@@ -1013,7 +1013,7 @@ The following setups need only be done once as long as they remain in effect:
 . Under Probe Tool Screens: Ensure reasonable values for "Rapid" and "Search," these are the speeds at which the probing will be performed and are in machine units per minute. +
 . Under Probe Tool Screens: Ensure that "Tool Measure" is enabled (this is a button that must be highlighted)
 . Under Settings: Ensure that "Use Tool Sensor" is enabled (this is a tick-box that must be checked)
-. In the Tool Table: Set-up a tool for the spindle probe and ensure that its Z offset is set to zero.
+. In the Tool Table: Set up a tool for the spindle probe and ensure that its Z offset is set to zero.
 
 [NOTE]
 It is possible to use a non-zero tool length for the tool probe,
