--- a/docs/src/remap/remap.adoc
+++ b/docs/src/remap/remap.adoc
@@ -1042,20 +1042,26 @@ This error message will be displayed in the UI, and returning INTERP_ERROR will 
 
 Note that both `(abort,` __<msg>__ `)` and returning INTERP_ERROR from an epilog will cause any ON_ABORT handler to be called as well if defined (see previous section).
 
-== Remapping other existing codes: S, M0, M1, M60
+== Remapping other existing codes:
 
 === Automatic gear selection be remapping  S (set spindle speed)
 
 A potential use for a remapped S code would be 'automatic gear selection' depending on speed.
 In the remap procedure one would test for the desired speed attainable given the current gear setting, and change gears appropriately if not.
 
-=== Adjusting the behavior of M0, M1, M60
+=== Adjusting the behavior of M0, M1
 
 A use case for remapping M0/M1 would be to customize the behavior of the existing code.
 For instance, it could be desirable to turn off the spindle, mist and flood during an M0 or M1 program pause,
 and turn these settings back on when the program is resumed.
 
 For a complete example doing just that, see `configs/sim/axis/remap/extend-builtins/`, which adapts M1 as laid out above.
+
+=== Adjusting the behavior of M7, M8, M9
+
+An example for remapping the built in behavior of M7/M8/M9 is the option to pass optional arguments like a P word for more complex coolant control (eg through tool vs external coolant flow).
+
+See `configs/sim/axis/remap/extend-builtins/`, for an example of such an extension of the built in behavior for M7,M8 and M9.
 
 == Creating new G-code cycles
 
